--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -109,10 +109,10 @@ template = "Your code is {{ .Code }} ."
 # 4152127777 = "123456"
 
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
-[auth.sms.twilio]
-enabled = false
-account_sid = ""
-message_service_sid = ""
+[auth.sms.twilio_verify]
+enabled = true
+account_sid = "AC45e8fae322ad7afe78a068e38cdb0d49"
+message_service_sid = "VA12a329b5065ff73f997c5fd03c7b7215"
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
 auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
 
